* makeidx durch index ersetzt; index ist besser
* a4wide wurde bereits durch geometry ersetzt und sollte mit den
  Koma-Klassen überflüssig sein

* für die Schriften die Pakete helvet und times eingefügt

* ae sollte nicht verwendet werden, da es die deutschen Umlaute in PDFs
  nicht richtig umsetzt (ä=ae), was die Suche nach ä erschwert, und ae
  ist auch nicht mehr notwendig

* dem Paket graphics die Option final verpasst, damit es die Grafiken
  trotz draft-Mode anzeigt

* amsmath die Option intlimits gegeben. Das ist genau was der Befehlt
  \Int gemacht hat, nur wird mit intlimits die Globaleinstellung geändert
  und das Dokument sollte konstistenter sein.

  Entsprechend den Befehl \Int gelöscht und alle \Int durch \int ersetzt

* das Paket fancyhdr ist nicht notwendig

* das eine Cases mit split aus amsmath gemacht und die Umgebung entfernt

* sämtliche $$...$$ durch \begin{gather*}...\end{gather*} ersetzt. siehe
  Latex-Sündenregister 1.6

* einige Underfull boxes entfernt; vor einer enumeration oder itimize
  darf kein Zeilenumbruch sein

* Die Klassenoption halfparskip* eingefügt, da an vielen Stellen der
  Absatzeinzug stört

* Die Umdefinierung des Befehls \L zu etwas anderem halte ich für
  gefährlich, da nicht klar ist, wozu \L gedacht ist und man sich somit
  Probleme innerhalb anderer Pakete einhandelt. Ich hab den Befehl in \Ll
  umbenannt.

* Die Befehle \WM und \VF durch ihre Bedeutung ersetzt. Diese Art der
  Definition/Verwendung bereitet Problem. Entweder fügt man das
  Leerzeichen mit in den Befehl ein, dann ist es immer da (auch vor
  Satzzeichen) oder man lässt es weg und alles klatscht an den Wörtern
  dran. Dabei hilft das Paket xspace.


git-svn-id: https://svn.lug-jena.de/uni-skripte@168 fe66431f-f319-0410-8186-f4e9b7e7c232

--- a/linde-stochastik/skript.latex
+++ b/linde-stochastik/skript.latex
@@ -1,20 +1,29 @@
-\documentclass[draft,12pt,twoside]{scrreprt}
-\usepackage{a4wide}
-\usepackage{makeidx}
+%
+% scrreprt trifft am Besten die Bedürfnisse eines Skripts, das ganze wird
+% zweiseitig (twoside), d.h. es wird zwischen linker und rechter Seite
+% unterschieden, und wir verwenden zwischen den Absätzen einen Abstand
+% von einer halben Zeile (halfparskip) und dafür keinen Absatzeinzug,
+% wobei die letzte Zeile eines Absatzes zu min. 1/4 leer ist.
+
+\documentclass[halfparskip*,draft,12pt,twoside]{scrreprt}
+
+\usepackage{index}
+
 \usepackage[T1]{fontenc}
+\usepackage{times}
+\usepackage{helvet}
+
 \usepackage[latin1]{inputenc}
-\usepackage{ae}
 \usepackage{ngerman}
-\usepackage{graphicx}
+\usepackage[final]{graphicx}
 \usepackage{delarray}
 \usepackage{epsfig}
 \usepackage{boxedminipage}
 \usepackage{pictex,color}
 \usepackage{amssymb}
-\usepackage{amsmath}
+\usepackage[intlimits]{amsmath}
 \usepackage{theorem}
 %\usepackage{treetex}
-\usepackage{fancyhdr}
 
 \makeindex
 \theoremstyle{break}
@@ -27,8 +36,6 @@
 
 \newcommand{\B}{\mathcal{B}}
 \newcommand{\EX}{\mathbb{E}X}
-\newcommand{\VG}{Verteilungsgesetz }
-\newcommand{\ZG}{Zufallsgröße }
 \newcommand{\X}{X}
 \newcommand{\Y}{Y}
 \newcommand{\N}{\mathcal{N}}
@@ -36,7 +43,7 @@
 \newcommand{\PR}{\mathcal{R}}
 \newcommand{\A}{\mathcal{A}}
 \newcommand{\E}{\mathcal{E}}
-\renewcommand{\L}{\mathcal{L}}
+\newcommand{\Ll}{\mathcal{Ll}}
 \newcommand{\ar}{\curvearrowright}
 \newcommand{\lb}{\left\{}               %kleine Klammer {
 \newcommand{\blb}{\bigl\{} %grosse Klammer {
@@ -46,13 +53,7 @@
 \newcommand{\bbrb}{\biggr\}} %ganz grosse Klammer }
 
 \newcommand{\vektor}[1][\omega]{\ensuremath{\lb#1_1,\ldots,#1_n\rb}}
-\newcommand{\WM}{Wahrscheinlichkeitsmaß }
-\newcommand{\VF}{Verteilungsfunktion }
-\newcommand{\Int}{\int\limits}
 \newcommand{\vol}{V\!ol}
-
-\newcolumntype{L}{>{$}l<{$}}
-\newenvironment{Cases}{\begin{array}\{{lL}.}{\end{array}}
 
 \begin{document}
 \author{Prof. Dr. Linde\thanks{aufgeschrieben von Christian Raschka \quad
@@ -123,8 +124,11 @@ von Zufallsexperimenten und von zufälligen Erscheinungen.
         Wahrscheinlickeitsraum
         \index{Wahrscheinlichkeitsraum}\index{Grundraum $\Omega$}
         \index{Ereignis-$\sigma$-Algebra}\index{Wahrscheinlichkeitsmaß}
-        \LARGE $$\left(\underbrace{\Omega}_{Grundraum},\underbrace{\A}_{
-        Ereignis-\sigma-Algebra},\underbrace{\mathbb{P}}_{Wahrscheinlichkeitsma"s} \right)$$ 
+        \LARGE
+  \begin{gather*}
+    \left(\underbrace{\Omega}_{Grundraum},\underbrace{\A}_{
+        Ereignis-\sigma-Algebra},\underbrace{\mathbb{P}}_{Wahrscheinlichkeitsma"s} \right)
+  \end{gather*}
         \normalsize beschrieben.
 \end{Ax}
 
@@ -235,7 +239,9 @@ $\mathbb{P}(A)=1$, d.h. $A$ tritt sicher ein
 $\mathbb{P}(A)\hat{=}$ mathematische Abstraktion für den Grenzwert der relativen Häufigkeiten $r_n$\\
 \index{Häufigkeit!relative}
 n-unabhängige Versuche:\\
-$$r_n:=\frac{\sharp\text{ Versuche, bei denen } A \text{ eingetreten ist}}{n}$$
+\begin{gather*}
+  r_n:=\frac{\sharp\text{ Versuche, bei denen } A \text{ eingetreten ist}}{n}
+\end{gather*}
 $r_n\rightarrow\mathbb{P}(A)$\\
 \underline{Bestimmung von $\mathbb{P}(A)$:}\\
 \begin{enumerate}
@@ -263,14 +269,19 @@ Welche Eigenschaft sollte $\mathbb{P}$ besitzen?
                                         \right\}; n=0,1,\dots$\\
         \underline{Frage:} Wahrscheinlichkeit von 
         $B := \left\{\text{erste Sechs nach ungerader Wurfzahl}\right\}$ \\
-        $$\mathbb{P}(B)=\mathbb{P}(\bigcup^\infty_{n=0}{A_{2n}})\stackrel{\text{!}}{=}
-                \sum^\infty_{n=0}{\mathbb{P}(A_{2n})}$$
+  \begin{gather*}
+    \mathbb{P}(B)=\mathbb{P}(\bigcup^\infty_{n=0}{A_{2n}})\stackrel{\text{!}}{=}
+                \sum^\infty_{n=0}{\mathbb{P}(A_{2n})}
+  \end{gather*}
 \end{Bsp}
 
 \begin{Def}
         $\mathbb{P}:\mathfrak{R}(\Omega)\rightarrow \left[0,1\right]$ heißt $\sigma$-additiv, wenn
                 für $A_1,A_2,\dots$ mit $A_i \cap A_j \emptyset;i\neq j$, stets
-        $${\mathbb{P}(\bigcup^\infty_{j=1}{A_j})=\sum^\infty_{\mathbb{P}(A_j)}}$$ folgt.
+  \begin{gather*}
+    {\mathbb{P}(\bigcup^\infty_{j=1}{A_j})=\sum^\infty_{\mathbb{P}(A_j)}}
+  \end{gather*}
+  folgt.
 \end{Def}
 
 \underline{Problem:}
@@ -325,15 +336,20 @@ $\A$ sollte die "`wichtigen"' Teilmengen enthalten, z.B. alle Intervalle, Punkte
 
 \begin{Bsp}
         Modell des Würfelns:\\
-        $$(\left\{1,\dots,6\right\},\mathfrak{R},\mathbb{P})$$
-        $$\mathbb{P}(A)=\frac{\sharp(A)}{6}$$
+  \begin{gather*}
+    (\left\{1,\dots,6\right\},\mathfrak{R},\mathbb{P})\\
+    \mathbb{P}(A)=\frac{\sharp(A)}{6}
+  \end{gather*}
 \end{Bsp}
 Versuch mir zufälligem Ausgang; \\
 Aufgabe : Man finde das passende Modell!
 \section{Einfache Eigenschaften von Wahrscheinlichkeitsmaßen}
 \index{Wahrscheinlichkeitsmaß!diskret!Eigenschaften}
-\LARGE $$(\Omega,\A,\p)$$
-\normalsize
+{ \LARGE
+  \begin{gather*}
+    (\Omega,\A,\p)
+  \end{gather*}
+}
 
 \begin{Satz}
 \label{satz:11}
@@ -346,7 +362,7 @@ Aufgabe : Man finde das passende Modell!
                 \item{$A_1\subseteq A_2 \subseteq \ldots \ar \p(\bigcup^\infty_{j=1})=\lim_{n \rightarrow \infty}{\p(A_n)}$
                                                 (Stetigkeit von unten)}
                 \item{$A_1\supseteq A_2 \supseteq \ldots \ar
-                    \p(\bigcap^\infty_{j=1}{A_j}= \lim_{n\rightarrow \infty}{\p(A_n)}$
+                    \p(\bigcap^\infty_{j=1}{A_j})= \lim_{n\rightarrow \infty}{\p(A_n)}$
                                                 (Stetigkeit von oben)}
         \end{enumerate}
         \underline{Beweis:}\\
@@ -424,16 +440,26 @@ $\ar \Omega=\left\{\omega_1,\ldots,\omega_n\right\} \quad \text{oder}
 \end{Bsp}
 
 zu Beispiel \ref{bsp:nmal}:\\
-$$\Omega=\lb\omega_1,\ldots,\omega_n\rb \qquad p_j = \p(\lb\omega_j\rb),\quad 1 \leq j \leq N.$$ \\
-$$p_j \geq 0; 1 = \p(\Omega)=\p(\bigcup^n_{j=1}{\omega_j})=\sum^n_{j=1}{\p(\lb\omega_j\rb)}=\sum^n_{j=1}{p_j}$$\\
-$$A\subseteq \Omega \qquad \p(A)=\p(\bigcup_{w_j\in A}{\omega_j})=\sum_{\lb j:\omega_j \in A\rb}{p_j}$$\\
+\begin{gather*}
+  \Omega=\lb\omega_1,\ldots,\omega_n\rb \qquad p_j =
+     \p(\lb\omega_j\rb),\quad 1 \leq j \leq N.\\
+  p_j \geq 0; 1 =
+     \p(\Omega)=\p(\bigcup^n_{j=1}{\omega_j})=
+     \sum^n_{j=1}{\p(\lb\omega_j\rb)}=\sum^n_{j=1}{p_j}\\
+  A\subseteq \Omega \qquad \p(A)=\p(\bigcup_{w_j\in
+     A}{\omega_j})=\sum_{\lb j:\omega_j \in A\rb}{p_j}
+\end{gather*}
 $\p$ ist Wahrscheinlickeitsmaß $\Rightarrow^{\text{eindeutig}} (p_j)^N_{j=1}$ mit $p_j \geq 0;
  \sum_j^N{p_j}=1$\\
 Seien nunmehr $p_j \geq$ mit $\sum^N_j{p_j}=1$ gegeben. Definieren nun:
 \begin{Def}
-        $$\p:\quad \mathfrak{R}(\Omega) \rightarrow \left[0,1\right]$$\\
-          \text{durch}
-        $$\p(A) := \sum_{w_j \in A}{p_j} \qquad \rightarrow \p \quad \text{Wahrscheinlichkeitsmaß}$$
+  \begin{gather*}
+    \p:\quad \mathfrak{R}(\Omega) \rightarrow \left[0,1\right]
+  \end{gather*}
+  \text{durch}
+  \begin{gather*}
+    \p(A) := \sum_{w_j \in A}{p_j} \qquad \rightarrow \p \quad \text{Wahrscheinlichkeitsmaß}
+  \end{gather*}
 \end{Def}
 
 $\Omega=\lb\omega_1,\ldots,\omega_n\rb \qquad \lb\p: \p\quad\text{Wahrscheinlichkeitsmaß auf }\Omega\rb$\\
@@ -455,13 +481,15 @@ $\Omega=\lb\omega_1,\omega_2,\ldots\rb \qquad p_j=\p(\lb\omega_j\rb), j=1,2,\ldo
 p_j \geq 0;\quad \sum^\infty_{j=1}{p_j}=1$\\
 $\p \Rightarrow (p_j)^\infty_{j=1};p_j\geq0;\sum^\infty_{j=1}{p_j}=1$\\
 Seien nun $(p_j)^\infty_{j=1}$ mit diesen Eigenschaften gegeben:\\
-$$\p(A):=\sum_{\omega_j\in A}{p_j}$$
-$\ar \p$ ist ein \WM auf $\mathfrak{R}(\Omega)$\\
+\begin{gather*}
+  \p(A):=\sum_{\omega_j\in A}{p_j}
+\end{gather*}
+$\ar \p$ ist ein Wahrscheinlichkeitsmaß auf $\mathfrak{R}(\Omega)$\\
 
 \begin{Bsp}
         $\Omega=\lb1,2,\ldots\rb \qquad p_j:=\frac{1}{2^j};\ar
         p_j\geq0;\ar \sum^\infty_{j=1}{p_j}= \frac{1}{1-\frac{1}{2}}-1=1$\\
-        $\p(A):=\sum{j\in A}{\frac{1}{2^j}}$; Erzeugendes \WM\\
+        $\p(A):=\sum{j\in A}{\frac{1}{2^j}}$; Erzeugendes Wahrscheinlichkeitsmaß\\
         $A=\lb2,4,6,\ldots\rb \qquad \p(A)=\sum^\infty_{j=1}{\frac{1}{2^{2j}}}=\frac{1}{1-\frac{1}{4}}-1=\frac{1}{3}$\\
         $\p(\lb2,3,4,\ldots\rb)=\sum^\infty_{j=2}{\frac{1}{2^j}}\qquad \text{besser:}\quad
         1-\p(\lb1\rb)=1-\frac{1}{2}=\frac{1}{2}$\\
@@ -469,7 +497,9 @@ $\ar \p$ ist ein \WM auf $\mathfrak{R}(\Omega)$\\
 
 \underline{Allgemeiner:} $\Omega$ beliebig; $D \subseteq \Omega$ mit $D=\lb\omega_1,\ldots,\omega_n\rb$
 oder  $D=\lb\omega_1,\omega_2,\ldots\rb$, so daß $\p(D)=1$. Dann heißt $D$ \underline{diskret}.
-$$\p(A)=\p(A\cap D)=\sum_{\omega_j \in A}{\p(\omega_j)}$$
+\begin{gather*}
+  \p(A)=\p(A\cap D)=\sum_{\omega_j \in A}{\p(\omega_j)}
+\end{gather*}
 
 \begin{Bsp}
         $\Omega=\mathbb{R} \qquad D=\lb1,2,3,\ldots\rb \qquad \text{Sei } \p(D)=1 \ar \p \text{diskret.}$
@@ -491,18 +521,20 @@ $$\p(A)=\p(A\cap D)=\sum_{\omega_j \in A}{\p(\omega_j)}$$
         \item{\underline{Einpunktverteilung:}\\
         \[
                 \Omega \text{ beliebig; } \omega_0 \in \Omega \text{ fest. }\quad\p(A)= 
-                        \begin{Cases}
-                                1 : & $\omega_0 \in A$\\
-                                0 : & $\omega_0 \notin A \quad$
-                        \end{Cases}\\
+                        \left\{\begin{split}
+                                1 : & \omega_0 \in A\\
+                                0 : & \omega_0 \notin A
+                        \end{split}\right.\\
         \]
                 $\ar \p$ ist Einpunktverteilung in $\omega_0$ ("`Dirac"'-Maß)\\
-                $D:=\lb\omega_0\rb \ar \p(D)=1 \text{ diskretes \WM} \p(\lb\omega_0\rb)=1;$
+                $D:=\lb\omega_0\rb \ar \p(D)=1 \text{ diskretes Wahrscheinlichkeitsmaß} \p(\lb\omega_0\rb)=1;$
                 das heißt mit Wahrscheinlichkeit von 1 tritt $\omega_0$ ein: Deterministisches Experiment}
         \item{\underline{Zweipunktverteilung:}\\
                 $\Omega=\lb0,1\rb \qquad \p(\lb1\rb)=p,\quad 0\geq p \geq 1 \qquad \p(\lb0\rb)=1-p$}
-        \item{\underline{Klassische Verteilung bzw. Gleichverteilung}\\
-                                $$\Omega=\vektor$$\\
+        \item \underline{Klassische Verteilung bzw. Gleichverteilung}\\
+          \begin{gather*}
+            \Omega=\vektor
+          \end{gather*}
                                 Alle Elemtarereignisse sind gleichwahrscheinlich. $\ar p_1=p_2=\ldots=p_n=\frac{1}{N} \\
                                 \p(A)=\sum_{\omega_j\in
                                   A}{p_j}=\frac{1}{N}\sum_{\omega_j\in
@@ -511,8 +543,10 @@ $$\p(A)=\p(A\cap D)=\sum_{\omega_j \in A}{\p(\omega_j)}$$
         \large
         \underline{Merkregel:}
 \begin{center}\begin{boxedminipage}[t]{13cm}
-  $$\p(A)=\frac{\text{Anzahl der günstigen Fälle für A}}{\text{Anzahl aller möglichen Fälle}}=
-    \frac{\sharp(A)}{\sharp(\Omega)}$$
+                \begin{gather*}
+                  \p(A)=\frac{\text{Anzahl der günstigen Fälle für A}}{\text{Anzahl aller möglichen Fälle}}=
+                     \frac{\sharp(A)}{\sharp(\Omega)}
+                \end{gather*}
 \end{boxedminipage}\end{center}
 \normalsize
 \setcounter{Bsp}{0}
@@ -559,42 +593,64 @@ $B:=\lb\text{In keinem Kasten ist mehr als ein Teilchen}\rb$\\
 Zu \ref{item:fall1}: \underline{Boltzmann-Statistik} (Teilchen tragen Namen)\\
 $\Omega=\blb(a_1,\ldots,a_n);a_j\in \lb1,\ldots,N\rb\brb$\\
 $(a_1,\ldots,a_n)$ ist eingetreten $\Leftrightarrow$ Teilchen k im Kasten $a_k ($für $k=1,\ldots,N)$\\
-$$\sharp(\Omega)=N^n$$\\
+          \begin{gather*}
+            \sharp(\Omega)=N^n
+          \end{gather*}
 Günstig für A: Ist $(K_1,\ldots,K_n)$ und alle Permutationen davon\\
-$$\sharp(A)=n! \qquad \Rightarrow \qquad \p(A)=\frac{n!}{N^n}$$\\
+          \begin{gather*}
+            \sharp(A)=n! \qquad \Rightarrow \qquad \p(A)=\frac{n!}{N^n}
+          \end{gather*}
 Man kann $\binom{N}{m}$ Kästen $K_1,\ldots,K_n$ vorher auswählen\\
-$$ \ar \quad \p(B)=\binom{N}{n}\p(A)=\binom{N}{n}\binom{n!}{N^n}=\frac{N!}{(N-n)!N^n}$$\\
+          \begin{gather*}
+            \ar \quad \p(B)=\binom{N}{n}\p(A)=\binom{N}{n}\binom{n!}{N^n}=\frac{N!}{(N-n)!N^n}
+          \end{gather*}
 Zu \ref{item:fall2}: \underline{Bose-Einstein-Statistik} (Teilchen anonym)\\
 
 %Abbildung
 
 N Kästen $\Leftrightarrow n-1 \quad$ Trennwände (2 äußere Trennwände fest)\\
 Alle Anordnungen von $N-1$ Trennwände und n Teilchen\\
-$$\Omega=\lb(\omega_1,\ldots,\omega_{N+n-1})\rb \qquad n \text{ der } \omega_j \text{ sind Teilchen, N-1 Trennwände}$$\\
+          \begin{gather*}
+            \Omega=\lb(\omega_1,\ldots,\omega_{N+n-1})\rb \qquad n
+               \text{ der } \omega_j \text{ sind Teilchen, N-1 Trennwände}
+          \end{gather*}
 %Abbildung
 $\ar \sharp(\Omega)=(N+n-1)! \qquad \sharp(A)=n!(N-1)! \qquad
 \p(A)=\frac{n!(N-1)!}{(N+n-1)!}$\\
 $\ar \p(B)=\binom{N}{n}\p(A)=\frac{N!(N-1)!}{(N-m)!(N+n-1)!}$
 
 Zu \ref{item:fall3}: \underline{Fermi-Dirac-Statistik} (Teilchen anonym, max. ein Teil pro Kasten)\\
-$$\Omega=\blb(k_1,\ldots,k_n):1\leq k_j \leq N;\quad k_i \neq k_j;\quad i\neq j \brb$$
+          \begin{gather*}
+            \Omega=\blb(k_1,\ldots,k_n):1\leq k_j \leq N;\quad k_i \neq k_j;\quad i\neq j \brb
+          \end{gather*}
 $(k_1,\ldots,k_j)$ tritt ein gdw. in den Kästen $k_1,\ldots,k_j$ befindet sich genau ein Teilchen\\
-$$\sharp(\Omega)=N\cdot(N-1)\cdot(N-2)\cdot\ldots\cdot(N-n+1)$$\\
+          \begin{gather*}
+            \sharp(\Omega)=N\cdot(N-1)\cdot(N-2)\cdot\ldots\cdot(N-n+1)
+          \end{gather*}
 Günstig für A: $(k_1,\ldots,k_n)$ und alle Permutationen davon $\quad \ar \quad \sharp(A)=n!$\\
-$$\ar \quad \p(A)=\frac{n!}{N\cdot\ldots\cdot(N-n+1)}=\frac{1}{\binom{N}{n}};\quad
-\p(B)=\binom{N}{n}\frac{1}{\binom{N}{n}}=1$$\\}
+          \begin{gather*}
+            \ar \quad \p(A)=\frac{n!}{N\cdot\ldots\cdot(N-n+1)}=\frac{1}{\binom{N}{n}};\quad
+               \p(B)=\binom{N}{n}\frac{1}{\binom{N}{n}}=1
+          \end{gather*}
         \item {\underline{Binominialverteilung:}\\
                 \index{Binominialverteilung}
                 Modell: In Jedem Versuch ist das Resultat entweder Null oder Eins\\
                 Die Wahrscheinlichkeit einer "`1"' ist: $p\in \left[0,1\right]$ und "`0"' mit $1-p$\\
                 Es gibt $n$ unabhängige Versuche. Wir suchen die Wahrscheinlichkeit $\p(k-mal 1)$\\
-                $$\p(k-mal 1)\overbrace{=}^{\text{später}}\binom{n}{k}p^k(1-p)^{n-k}$$
-                $$\Omega=\lb0,\ldots,n\rb \qquad 0\leq p \leq 1;$$\\
-                $$\boxed{B_{n,p}(\lb k\rb):=\binom{n}{k}p^k(1-p)^{n-k};\quad k=0,\ldots,n}$$
-                zu zeigen: $B_{n,p}(\lb k\rb)\geq0$ (klar), bleibt zu zeigen: $$\sum^n_{k=0}{B_{n,p}(\lb k\rb)}=1$$
-		Mit dem binomischen Satz gilt:
-                \[\sum^n_{k=0}{\binom{n}{k}p^k(1-p)^{n-k}}=(p+(1-p))^n=1^n=1\]\\
-                $\ar B_{n,p}$ ist \WM auf $\Omega$: Binominialverteilung mit Parametern n,p.\\
+          \begin{gather*}
+            \p(k-mal 1)\overbrace{=}^{\text{später}}
+               \binom{n}{k}p^k(1-p)^{n-k}\\
+            \Omega=\lb0,\ldots,n\rb \qquad 0\leq p \leq 1;\\
+            \boxed{B_{n,p}(\lb k\rb):=\binom{n}{k}p^k(1-p)^{n-k};\quad k=0,\ldots,n}
+          \end{gather*}
+          zu zeigen: $B_{n,p}(\lb k\rb)\geq0$ (klar), bleibt zu zeigen:
+          \begin{gather*}
+            \sum^n_{k=0}{B_{n,p}(\lb k\rb)}=1\\
+          \end{gather*}
+          Mit dem binomischen Satz gilt:
+          \[\sum^n_{k=0}{\binom{n}{k}p^k(1-p)^{n-k}}=(p+(1-p))^n=1^n=1\]\\
+          $\ar B_{n,p}$ ist Wahrscheinlichkeitsmaß auf $\Omega$:
+          Binominialverteilung mit Parametern n,p.\\
                 $n=1 \quad \ar \Omega(\lb0,1\rb)\quad B_{1,p}=1-p\qquad B_{1,p}(\lb1\rb)=p:$ Zweipunktverteilung\\
                 $n\geq4 \qquad A=\lb0,1,2\rb\quad B_{n,p}(A)=(1-p)^n+np(1-p)^{1\cdot n}+\binom{n}{2}p^2(1-p)^{n-2}$\\
         }
@@ -606,27 +662,37 @@ $$\ar \quad \p(A)=\frac{n!}{N\cdot\ldots\cdot(N-n+1)}=\frac{1}{\binom{N}{n}};\qu
                 Insgesamt $\binom{N}{n}$ Möglichkeiten, Geräte zu
                 entnehmen. Damit davon genau m defekt sind, m Geräte aus den
                 M defekten entnehmen, n-m Geräte aus den N-M nicht defekten.
-                $$\binom{M}{m}\binom{N-M}{n-m}\text{ Möglichkeiten}$$
+          \begin{gather*}
+            \binom{M}{m}\binom{N-M}{n-m}\text{ Möglichkeiten}
+          \end{gather*}
                 Ansatz: 
-                $$\p(\lb m \rb):=\frac{\binom{M}{m}\binom{N-M}{n-m}}{\binom{N}{n}};\quad m=0,\ldots,n$$
+          \begin{gather*}
+            \p(\lb m \rb):=\frac{\binom{M}{m}\binom{N-M}{n-m}}{\binom{N}{n}};\quad m=0,\ldots,n
+          \end{gather*}
                 $\Rightarrow$ Hypergeometrische Verteilung mit Parametern N,M,n.\\
-                z.z.
-                $$\sum^n_{m=0}{\binom{M}{m}\binom{N-M}{n-m}}=\binom{N}{N}\quad \text{Übungsaufgabe!}$$
-                $\ar \p$ ist \WM auf $\Omega(\lb0,\ldots,n\rb)\quad \binom{M}{m}=0 \quad \text{für }m\leq M$\\
+                z.\,z.
+          \begin{gather*}
+            \sum^n_{m=0}{\binom{M}{m}\binom{N-M}{n-m}}=\binom{N}{N}\quad \text{Übungsaufgabe!}
+          \end{gather*}
+                $\ar \p$ ist Wahrscheinlichkeitsmaß auf $\Omega(\lb0,\ldots,n\rb)\quad \binom{M}{m}=0 \quad \text{für }m\leq M$\\
         }
         \item {\underline{POISSON-Verteilung:}\\
                 \index{Poisson-Verteilung@{\emph{Poisson}-Verteilung}}
                 Starten mit $B_{n,p}$ (n Versuche, Erfolgswahrscheinlichkeit p)
-                $$ \text{"`}n\rightarrow\infty,\quad p\rightarrow0\text{"'} $$
+          \begin{gather*}
+            \text{"`}n\rightarrow\infty,\quad p\rightarrow0\text{"'}
+          \end{gather*}
                 Gegeben: $\lambda>0 \qquad p_n:=\frac{\lambda}{n} \underset{n\rightarrow\infty}{\rightarrow}0$
                 \begin{Satz}
                         \begin{boxedminipage}[t]{9.5cm}
                                 \underline{Poissonscher-Grenzwertsatz}\\
                                 \index{Poissonscher-Grenzwertsatz@
                                 {\emph{Poisson}scher-Grenzwertsatz}}
-                                $$\lambda>0,\quad k \in \mathbb{N}_0$$
-                                $$\underset{n\rightarrow\infty}{lim}{B_{n,\frac{\lambda}{n}}
-                                  (\lb k\rb)=\frac{\lambda^k}{k!}e^{-\lambda}}$$
+                          \begin{gather*}
+                            \lambda>0,\quad k \in \mathbb{N}_0\\
+                                \underset{n\rightarrow\infty}{lim}{B_{n,\frac{\lambda}{n}}
+                                  (\lb k\rb)=\frac{\lambda^k}{k!}e^{-\lambda}}
+                          \end{gather*}
                         \end{boxedminipage}
                 \end{Satz}
                 \underline{Beweis: }\\
@@ -649,15 +715,21 @@ $$\ar \quad \p(A)=\frac{n!}{N\cdot\ldots\cdot(N-n+1)}=\frac{1}{\binom{N}{n}};\qu
                 \end{equation*}
                 
                 \begin{Def}
-                        Die Abbildung $P_\lambda$ mit $$P_\lambda(\lb
-                        k\rb):=\frac{\lambda^k}{k!}e^{-\lambda}; \qquad k=0,1,\ldots$$
+                        Die Abbildung $P_\lambda$ mit
+                  \begin{gather*}
+                    P_\lambda(\lb
+                       k\rb):=\frac{\lambda^k}{k!}e^{-\lambda}; \qquad k=0,1,\ldots
+                  \end{gather*}
                         heißt Poisson-Verteilung mit Parameter $\lambda>0$\\
                 \end{Def}
                 \underline{Probe: } $\Omega=\mathbb{N}_0$\\
                 zu zeigen: $\sum^\infty_{k=0}{P_\lambda(\lb k \rb)}\overset{\text{?}}{=}1$
-                $$e^{-\lambda}\sum^\infty_{k=0}{\frac{\lambda^k}{k!}}=e^{-\lambda}\cdot e^\lambda=1$$
-                $$B_{n,\frac{\lambda}{n}}(\lb k \rb)
-                \underset{n\rightarrow\infty}{\rightarrow}P_\lambda(\lb k \rb)$$
+  \begin{gather*}
+    e^{-\lambda}\sum^\infty_{k=0}{\frac{\lambda^k}{k!}}=e^{-\lambda}\cdot
+       e^\lambda=1\\
+    B_{n,\frac{\lambda}{n}}(\lb k \rb)
+       \underset{n\rightarrow\infty}{\rightarrow}P_\lambda(\lb k \rb)
+  \end{gather*}
                 Poisson-Verteilung trifft auf, wenn viele Versuche und
                 geringe Erfolgswahrscheinlichkeiten herrschen
                 \begin{itemize}
@@ -727,7 +799,7 @@ Suchen: $\p([a,b])=$ ?
 \begin{Def}
   Die Wahrscheinlichkeit eines Intervalls $[a,b]$ ist
   \[ \p([a,b]):=\int\limits_a^bp(x)\; dx\]
-  p Dichte des \WM $\p$\index{Dichte|see {Wahrscheinlichkeitsdichte}}
+  p Dichte des Wahrscheinlichkeitsmaß $\p$\index{Dichte|see {Wahrscheinlichkeitsdichte}}
   \begin{itemize}
     \item{$\p([a,b])\geq 0$}
     \item{$\p(\mathbb{R}=\int\limits_{-\infty}^\infty p(x) \; dx = 1$}
@@ -750,7 +822,10 @@ Vorgängen, bei denen das Ergebnis eine reelle Zahl ist. Stetige
 Wahrscheinlichkeitsmaße:\\[0.5em]
 \index{Wahrscheinlichkeitsmaß!stetig}
 $\Omega = \mathbb{R}$ \qquad Suchen $\sigma$-Algebra $\A \subseteq
-\mathcal{R}(\mathbb{R})$, so dass $$\p:\quad \A \to [0,1]$$
+\mathcal{R}(\mathbb{R})$, so dass
+\begin{gather*}
+  \p:\quad \A \to [0,1]
+\end{gather*}
 Im Moment ist $\p$ nur auf $\lb[a,b]:\quad a\leq b \rb$ definiert.\\
 \emph{Aussage:} $\Omega$ beliebig, $\E \subseteq
 \mathfrak{R}(\Omega)$\\
@@ -762,11 +837,11 @@ $\sigma$-Algebra $\A$.\\
   \emptyset \text{ ,da }\mathfrak{R}(\Omega) \supseteq
   \E}\rb\]
 man zeigt: $\A_0$ ist $\sigma$-Algebra; $\A_0\supseteq \E$\\
-$\L(\mathbb{R})$ kleinste $\mathcal{E}$-umfassende
+$\Ll(\mathbb{R})$ kleinste $\mathcal{E}$-umfassende
   $\sigma$-Algebra.\\
-Ein stetiges \WM $\p$ lässt sich eindeutig von $\E$ auf
+Ein stetiges Wahrscheinlichkeitsmaß $\p$ lässt sich eindeutig von $\E$ auf
   $\mathcal{L}(\mathbb{R})$ fortsetzen. $\to
-  (\mathbb{R},\L(\mathbb{R}),\p)$ mit $\p$ erzeugt von der
+  (\mathbb{R},\Ll(\mathbb{R}),\p)$ mit $\p$ erzeugt von der
   Dichte p
 \subsection*{Eigenschaften stetiger Wahrscheinlichkeitsmaße}
 \index{Wahrscheinlichkeitsmaß!stetig!Eigenschaften}
@@ -795,12 +870,18 @@ Ein stetiges \WM $\p$ lässt sich eindeutig von $\E$ auf
                           \]
       \begin{itemize}
         \item{$p(x)=0$}
-        \item{$$\Int_{-\infty}^\infty p(x)\,dx=\Int_a^bp(x)\,dx=\frac{1}{\left|I\right|}\Int_a^bdx=\frac{b-a}{b-a}=1$$}
+        \item
+        \begin{gather*}
+          \int_{-\infty}^\infty p(x)\,dx=\int_a^bp(x)\,dx=
+             \frac{1}{\left|I\right|}\int_a^bdx=\frac{b-a}{b-a}=1
+        \end{gather*}
       \end{itemize}
       $[\alpha,\beta]\subseteq [a,b]$
-      $$\p([\alpha,\beta])=\Int_\alpha^\beta
-      p(x)\,dx=\frac{1}{ba}\Int_\alpha^\beta
-      dx=\frac{\beta-\alpha}{b-a}=1$$
+    \begin{gather*}
+      \p([\alpha,\beta])=\int_\alpha^\beta
+      p(x)\,dx=\frac{1}{ba}\int_\alpha^\beta
+      dx=\frac{\beta-\alpha}{b-a}=1
+    \end{gather*}
       $\to\quad$ Wahrscheinlichkeit ist proportional zur Länge von
       $[a,b]$\\
       \begin{figure}[h]
@@ -826,12 +907,14 @@ Ein stetiges \WM $\p$ lässt sich eindeutig von $\E$ auf
           dann gilt:
           \begin{itemize}
             \item{$p(x)\geq 0;\quad x \in \mathbb{R}^n$}
-            \item{$1=\Int_{\mathbb{R}^n}p(x)\,dx=\Int_{-\infty}^\infty\cdots\
+            \item{$1=\int_{\mathbb{R}^n}p(x)\,dx=\int_{-\infty}^\infty\cdots\
                    Int_{-\infty}^\infty p(x_1,\ldots,x_n)\,dx_1,\ldots,x_n$}
           \end{itemize}
           $A\subset \mathbb{R}^n\quad$ Quader oder Kugel oder
           ähnliches
-          $$ \p(A):=\Int_Ap(x)\,dx\quad\mbox{Wahrscheinlichkeitsmaß}$$
+        \begin{gather*}
+          \p(A):=\int_Ap(x)\,dx\quad\mbox{Wahrscheinlichkeitsmaß}
+        \end{gather*}
           \setcounter{Bsp}{0}
           \begin{Bsp}
             $p(x_1,x_2):=\lb \begin{array}{c@{\quad :\quad}l}
@@ -842,15 +925,17 @@ Ein stetiges \WM $\p$ lässt sich eindeutig von $\E$ auf
             \begin{enumerate}
               \item{$\p(x_1,x_2)\geq 0$}
               \item{\begin{eqnarray*}
-                     \Int_{-\infty}^\infty\!\Int_{-\infty}^\infty
+                     \int_{-\infty}^\infty\!\int_{-\infty}^\infty
                      p(x_1,x_2)\,dx_1\,dx_2
-                     &=& \Int_0^1\!\Int_0^1 (x_1+x_2)\,dx_1\,dx_2\\
-                     &=& \Int_0^1\left[\frac{1}{2}x_1^2+x_1x_2\right]_0^1\,dx_2\\
-                     &=& \Int_0^1\left(\frac{1}{2}+x_2\right)\,dx_2\\
+                     &=& \int_0^1\!\int_0^1 (x_1+x_2)\,dx_1\,dx_2\\
+                     &=& \int_0^1\left[\frac{1}{2}x_1^2+x_1x_2\right]_0^1\,dx_2\\
+                     &=& \int_0^1\left(\frac{1}{2}+x_2\right)\,dx_2\\
                      &=& \frac{1}{2}+\frac{1}{2}=1 \to p\quad \mbox{ist Wahrscheinlichkeitsmaß!}
                    \end{eqnarray*}}
 	     \end{enumerate}
-                   $$A:=\lb(x_1+x_2):\quad x_1 \leq x_2\rb$$
+            \begin{gather*}
+              A:=\lb(x_1+x_2):\quad x_1 \leq x_2\rb
+            \end{gather*}
                    \begin{figure}[htbp]
                      \begin{center}
                         \input{figures/gv03.pictex}
@@ -859,11 +944,11 @@ Ein stetiges \WM $\p$ lässt sich eindeutig von $\E$ auf
                      \end{center}
                    \end{figure}
                    \begin{eqnarray*}
-                     \p(A)&=&\Int_{A \atop 0\leq x_1,x_2\leq
+                     \p(A)&=&\int_{A \atop 0\leq x_1,x_2\leq
                      1}(x_1+x_2)\,dx_1\,dx_2 \\
                      &=&
-                     \Int_0^{x_1}\!\Int_0^{x_2}(x_1+x_2)\,dx_1\,dx_2\\
-                     &=& \Int_0^13\frac{x_2^2}{2}\,dx_2=\frac{1}{2}
+                     \int_0^{x_1}\!\int_0^{x_2}(x_1+x_2)\,dx_1\,dx_2\\
+                     &=& \int_0^13\frac{x_2^2}{2}\,dx_2=\frac{1}{2}
                    \end{eqnarray*}
              \end{Bsp}
                    Sei nun $B \subseteq \mathbb{R}^n\quad$ Quader,
@@ -886,11 +971,11 @@ Ein stetiges \WM $\p$ lässt sich eindeutig von $\E$ auf
                    p Wahrscheinlichkeitsdichte?\\
                    \begin{enumerate}
                      \item{$p(x)\geq 0$}
-                     \item{$\Int_{\mathbb{R}^n}p(x)\,dx=\Int_B\frac{1}{\vol_n(B)}\,dx=\frac{\vol_n(B)}{\vol_n(B)}=1$}  
+                     \item{$\int_{\mathbb{R}^n}p(x)\,dx=\int_B\frac{1}{\vol_n(B)}\,dx=\frac{\vol_n(B)}{\vol_n(B)}=1$}  
                    \end{enumerate}
                    $A\subseteq B$
                    \[
-                   \p(A)=\Int_Ap(x)\,dx=\frac{1}{\vol_n(B)}\Int_Adx=\mbox{\fbox{$\frac{\vol_n(A)}{\vol_n(B)}$}}\]
+                   \p(A)=\int_Ap(x)\,dx=\frac{1}{\vol_n(B)}\int_Adx=\mbox{\fbox{$\frac{\vol_n(A)}{\vol_n(B)}$}}\]
                    \[ \to \mbox{\emph{n-dimensionale Gleichverteilung
                        auf B von }} (A\subseteq B)\]
 \setcounter{Bsp}{0}
@@ -948,12 +1033,16 @@ Ein stetiges \WM $\p$ lässt sich eindeutig von $\E$ auf
   [-\frac{\pi}{2},\frac{\pi}{2}]$ entsprechend der
   Gleichverteilung. \\
   Nadel schneidet untere Gerade
-  $$ \Leftrightarrow \quad x \leq \frac{a}{2}\cos\theta$$
+  \begin{gather*}
+    \Leftrightarrow \quad x \leq \frac{a}{2}\cos\theta
+  \end{gather*}
   Nadel schneidet untere Gerade
-  $$ \Leftrightarrow \quad 1-x \leq \frac{a}{2}\cos\theta$$
+  \begin{gather*}
+    \Leftrightarrow \quad 1-x \leq \frac{a}{2}\cos\theta
+  \end{gather*}
 %Abbildung einfügen
   \[
-  \p(A)=\frac{\vol_2(A)}{\pi}=\frac{1}{\pi}2\Int_{-\frac{\pi}{2}}^\frac{\pi}{2}\frac{a}{2}\cos\theta\,d\theta
+  \p(A)=\frac{\vol_2(A)}{\pi}=\frac{1}{\pi}2\int_{-\frac{\pi}{2}}^\frac{\pi}{2}\frac{a}{2}\cos\theta\,d\theta
   =
   \left.\frac{a}{\pi}\sin\theta\right|_{-\frac{\pi}{2}}^\frac{\pi}{2}=\frac{2a}{\pi}\]
   zum Beispiel für $a=\frac{\pi}{4} \to \p(A)=\frac{1}{2}$
@@ -1018,14 +1107,14 @@ Ein stetiges \WM $\p$ lässt sich eindeutig von $\E$ auf
         e^{-\frac{y^2}{2}}\;dy}_{=\sqrt{2\pi}}=1 \]
         \begin{Def}
             $\mathcal{N}(a,\sigma^2)$ hei"st das von $\p_{a,\sigma^2}$ erzeugte
-            \WM, d.h. 
+            Wahrscheinlichkeitsmaß, d.h. 
             \[ \mathcal{N}(a,\sigma^2)([\alpha,\beta])=\frac{1}{\sqrt{2\pi} \sigma}
             \int\limits_\alpha^\beta
             e^{\frac{-\frac{1}{2}(x-a)^2}{\sigma^2}}\;dx \]
             $\mathcal{N}(a,\sigma^2)$ Normalverteilung mit Erwartungswert
             $a\in \mathbb{R}$ und Varianz $\sigma^2>0$\\
             $\mathcal{N}(0,1)$ hei"st Standardnormalverteilung und hat die Dichte
-            $\frac{e^{-\frac{x^2}{2}}}{\sqrt{2\pi}}$ (Wichtigstes \WM!)
+            $\frac{e^{-\frac{x^2}{2}}}{\sqrt{2\pi}}$ (Wichtigstes Wahrscheinlichkeitsmaß!)
         \end{Def}
     }
     \item[4.) Exponentialverteilung]{.\index{Exponentialverteilung}\\
@@ -1040,7 +1129,7 @@ Ein stetiges \WM $\p$ lässt sich eindeutig von $\E$ auf
             \int\limits_0^\infty \lambda e^{-\lambda x}\;dx=
             \lambda\left[ \frac{e^{-\lambda x}}{-\lambda}\right]_0^\infty=1$}
         \end{enumerate}
-        Das erzeugte \WM $E_\lambda$ hei"st Exponentialverteilung
+        Das erzeugte Wahrscheinlichkeitsmaß $E_\lambda$ hei"st Exponentialverteilung
         mit Parameter $\lambda>0$\\
         \[ E_\lambda([\alpha,\beta])=\int\limits_\alpha^\beta \lambda
         e^{-\lambda x}\;dx=\left[ -e^{-\lambda x}\right]_\alpha^\beta
@@ -1096,7 +1185,7 @@ Ein stetiges \WM $\p$ lässt sich eindeutig von $\E$ auf
     \end{Bsp}
     \begin{Satz}
         \begin{enumerate}
-            \item{Die Zuordnung $ A \to \p(A|B)$ ist \WM auf $(\Omega,\A)$}
+            \item{Die Zuordnung $ A \to \p(A|B)$ ist Wahrscheinlichkeitsmaß auf $(\Omega,\A)$}
             \label{satz:141}
             \item{$\p(B|B)=1;\quad \p(B^C|B)=0$}
         \end{enumerate}
@@ -1347,31 +1436,41 @@ Ein stetiges \WM $\p$ lässt sich eindeutig von $\E$ auf
     \index{Unabhängigkeit|)}
 
     \subsection*{\emph{Bernoulli}-Schema}
-    \index{Bernoulli-SChema@{\emph{Bernoulli}-Schema}}
-    \underline{Stochastiches Experiment:}\\
-    Beobachte 1 (Erfolg) oder 0 (Mißerfolg)\\
-    Wahrscheinlichkeit für Erfolg sei $p\in[0,1]$,
-    Wahrscheinlichkeit für Mißerfolg $1-p$\\
-    n unabhängige Experimente (\emph{Bernoulli})\\
-    Beobachte Vektor $\omega=(\omega_1,\ldots,\omega_n),\omega_j\in\lb0,1\rb
-    \qquad\Omega=\lb0,1\rb^n\qquad\A=\PR(\Omega)$
-    \begin{Bsp}[$p=\frac{1}{2}$]
-        $\p=$ Gleichverteilung$\qquad\to p=\frac{1}{2}\qquad\to\p(\lb\omega\rb)
-        =\frac{1}{2^n}$\\
+    \index{Bernoulli-Schema@{\emph{Bernoulli}-Schema}}
+Man betrachte ein stochastiches Experiment, bei dem es nur die
+zwei Ergebnisse Erfolg (=1) und Mißerfolg (=0) gibt. Die
+Wahrscheinlichkeit für Erfolg sei $p\in[0,1]$ und entsprechend ergibt
+sich die Wahrscheinlichkeit für Mißerfolg als $1-p$. Für $n$ unabhängige
+Experimente (Idee/Gedanke von \emph{Bernoulli}) erhält man so einen
+Vektor $\omega=(\omega_1,\ldots,\omega_n)$, wobei die
+$\omega_j\in\lb0,1\rb$ sind, und $\Omega=\lb0,1\rb^n\qquad\A=\PR(\Omega)$
+
+    \begin{Bsp}[Bernoulli-Schema für $p=\frac{1}{2}$]
+      Legt man für $\p$ die Gleichverteilung zugrunde, also
+      $p=\frac{1}{2}$, so bekommt man für die Wahrscheinlichkeit des
+      Ereignisses $\omega$
+      \begin{gather*}
+        \p(\lb\omega\rb) =\frac{1}{2^n}
+      \end{gather*}
     \end{Bsp}
-    \begin{Bsp}[$p>\frac{1}{2}$]
-        $p>\frac{1}{2}\quad\to\quad(1,\ldots,1)$ ist wahrscheinlicher als
-        $(0,\ldots,0)\quad\to\p$ keine Gleichverteilung!\\
-        $n=4\\
-        \p((0,1,0,1))=p^2(-p)^2\\
-        \p((0,0,0,1))=p(1-p)^3$\\
-        allgemein gilt:
-        \[ p^k(1-p)^{n-k}=\p(A)\qquad k=\sharp\lb j:\omega_j=1\rb\]
+
+    \begin{Bsp}[Bernoulli-Schema für $p>\frac{1}{2}$]
+      Ist eines der Teilergebnisse wahrscheinlicher als das andere
+      ($p>\frac{1}{2}$), wird das Ereignis $(1,\ldots,1)$
+      wahrscheinlicher als das Ereignis $(0,\ldots,0)$ und $\p$ ist keine
+      Gleichverteilung!
+
+      Bei $n=4$ Schritten ist beispielsweise
+      $\p\big((0,1,0,1)\big)=p^2(-p)^2$ oder
+      $\p\big((0,0,0,1)\big)=p(1-p)^3$. Allgemein gilt:
+      \begin{gather*}
+        p^k(1-p)^{n-k}=\p(A)\qquad k=\sharp\lb j:\omega_j=1\rb
+      \end{gather*}
     \end{Bsp}
     $\Omega=\lb0,1\rb^n\qquad 0\leq p\leq 1\\
     \p(\lb\omega\rb)=p^k(1-p){n-k}\\
     \omega=(\omega_1,\ldots,\omega_n),\quad k=\omega_1+\ldots+\omega_n$\\
-    Probe: $\p$ ist \WM
+    Probe: $\p$ ist Wahrscheinlichkeitsmaß
     \begin{enumerate}
         \item{$p^k(1-p)^{n-k}\geq 0$}
         \item{$\sum\limits_{\omega\in\mathbb{R}}p(\lb\omega\rb)\stackrel{!}{=}1
@@ -1424,7 +1523,7 @@ Ein stetiges \WM $\p$ lässt sich eindeutig von $\E$ auf
     \[A=\lb\omega:\omega_1=a_1,\ldots,\omega_n=a_n,\omega_{n+1} \text{ beliebig}\rb
     \]für vorgegebene $a_1,\ldots,a_n \in \lb0,1\rb$
     \[\p(A):=p^k(1-p)^{n-k}\qquad k=a_1+\ldots+a_n \]
-    $\p$ lässt sich eindeutig zu einem \WM auf der von solchen Mengen $A$
+    $\p$ lässt sich eindeutig zu einem Wahrscheinlichkeitsmaß auf der von solchen Mengen $A$
     erzeugten $\sigma$-Algebra fortsetzen (ohne Beweis!)\\
     \underline{Spezialfall:}
     \[A=\lb\omega:\omega_1=0,\ldots,\omega_n=0,\omega_{n+1}=1\rb
@@ -1432,7 +1531,7 @@ Ein stetiges \WM $\p$ lässt sich eindeutig von $\E$ auf
     $\to \p(A)=p(1-p)^n$\\
     \begin{Def}
         $0<p<1,\quad \Omega=\mathbb{N}_0=\lb0,1,2,\ldots\rb$\\
-        Das \WM von $\p$ auf $\PR(\mathbb{N_0}$ mit:
+        Das Wahrscheinlichkeitsmaß von $\p$ auf $\PR(\mathbb{N_0}$ mit:
         \[\p(\lb n\rb):=p(1-p)^n\]
         heisst geometrische Verteilung mit Parameter p.
     \end{Def}
@@ -1440,7 +1539,7 @@ Ein stetiges \WM $\p$ lässt sich eindeutig von $\E$ auf
     zu zeigen: $\sum_{n=0}^\infty \p(\lb n\rb)\stackrel{?}{=}1$\\
     \underline{Beweis:}\\
     $\sum_{n=0}^\infty p(1-p)^n=p\sum_{n=0}^\infty(1-p)^n
-    =p\cdot\frac{1}{1-(1-p)}=1\quad\to$ \WM\qquad\boxed{}\\
+    =p\cdot\frac{1}{1-(1-p)}=1\quad\to$ Wahrscheinlichkeitsmaß\qquad\boxed{}\\
     $\p(\lb n\rb)=\p(\text{im }(n+1)\text{. Versuch erstmals Erfolg})$\\
     \setcounter{Bsp}{0}
     \begin{Bsp}
@@ -1457,7 +1556,7 @@ Ein stetiges \WM $\p$ lässt sich eindeutig von $\E$ auf
     \end{Bsp}
     \index{Geometrische Verteilung|)}
 \section{Verteilungsfunktion}
-    $\p$ sei ein \WM auf $\mathbb{R}$ (besser $\L(\mathbb{R})$),
+    $\p$ sei ein Wahrscheinlichkeitsmaß auf $\mathbb{R}$ (besser $\Ll(\mathbb{R})$),
     stetig oder diskret
     \begin{Def}
         Die Funktion $F:\mathbb{R}\to\mathbb{R}$ mit 
@@ -1486,7 +1585,7 @@ Ein stetiges \WM $\p$ lässt sich eindeutig von $\E$ auf
         \end{figure}
     \end{Bsp}
     \begin{Satz}
-        Sei $F$ die \VF eines Wahrscheinlichkeitsmaßes
+        Sei $F$ die Verteilungsfunktion eines Wahrscheinlichkeitsmaßes
         \begin{enumerate}
             \item{$F$ ist monoton wachsend}
             \item{$F(-\infty):=\lim\limits_{t\to-\infty}F(t)=0;\\
@@ -1494,7 +1593,7 @@ Ein stetiges \WM $\p$ lässt sich eindeutig von $\E$ auf
             \item{$F$ ist rechtsseitig stetig}
         \end{enumerate}
     \end{Satz}
-    \underline{Beweis:}\\
+    \underline{Beweis:}
     \begin{enumerate}
         \item{$t\leq s\to (-\infty,t] \subseteq (-\infty,s]\quad
          \stackrel{\text{Monotonie}}{\to}\quad \p((-\infty,t])\leq \p((-\infty,s])
@@ -1514,10 +1613,10 @@ Ein stetiges \WM $\p$ lässt sich eindeutig von $\E$ auf
          A_1\supseteq A_2\supseteq \ldots$ und $
          \bigcap_{n=1}^\infty A_n=(-\infty,t]\\ \to\quad
          \p(A_n)\to_{n\to\infty}\p(-\infty,t]=F(t)$}
-    \end{enumerate}\boxed{}\\
+    \end{enumerate}\boxed{}
     \underline{Ohne Beweis:}\\
     Sei $F:\quad\mathbb{R}\to\mathbb{R}$ mit 1),2),3). Dann existiert ein eindeutig
-    bestimmtes \WM $\p$ auf $\mathbb{R}$ mit $F(t)=\p((-\infty,t])$\\
+    bestimmtes Wahrscheinlichkeitsmaß $\p$ auf $\mathbb{R}$ mit $F(t)=\p((-\infty,t])$\\
     
     \subsection*{Weitere Eigenschaften}
     \begin{enumerate}
@@ -1570,10 +1669,9 @@ Ein stetiges \WM $\p$ lässt sich eindeutig von $\E$ auf
   \end{enumerate}
     
 
-
-    \input{chapter2.tex}
+\input{chapter2.tex}
 	
-	\input{chapter3.tex}
+\input{chapter3.tex}
 
 \printindex
 \end{document}
